[workspace]
members = [
    # Reth stateless validator
    "stateless-validator/reth/airbender",
    "stateless-validator/reth/io",
    "stateless-validator/reth/guest",
    "stateless-validator/reth/openvm",
    "stateless-validator/reth/pico",
    "stateless-validator/reth/risc0",
    "stateless-validator/reth/sp1",
    "stateless-validator/reth/zisk",

    # Ethrex stateless validator is not part of the workspace

    # Empty program
    "empty-program/sp1",
    "empty-program/risc0",
    "empty-program/zisk",
    "empty-program/openvm",
    "empty-program/pico",

    # Block encoding length
    "block-encoding-length/io",
    "block-encoding-length/sp1",

    # Panic guest
    "panic-guest/sp1",
    "panic-guest/risc0",
    "panic-guest/zisk",
    "panic-guest/openvm",
    "panic-guest/pico",

    # Libs
    "libs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.unused_crate_dependencies = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

[workspace.dependencies]
guest-libs = { path = "libs", default-features = false }
reth-guest = { path = "stateless-validator/reth/guest", default-features = false }
reth-guest-io = { path = "stateless-validator/reth/io", default-features = false }
block-encoding-length-io = { path = "block-encoding-length/io", default-features = false }
ere-io-serde = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14", default-features = false }
ere-platform-trait = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14" }
ere-platform-airbender = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14", default-features = false }
ere-platform-openvm = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14", default-features = false }
ere-platform-pico = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14", default-features = false }
ere-platform-risc0 = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14", default-features = false }
ere-platform-sp1 = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14", default-features = false }
ere-platform-zisk = { git = "https://github.com/eth-applied-research-group/ere", tag = "v0.0.14", default-features = false }

openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-revm-crypto = { git = "https://github.com/axiom-crypto/openvm-reth-benchmark.git", branch = "openvm-v1.4.1-reth-1.8.3", default-features = false }

risc0-zkvm-platform = { version = "2.2.1", default-features = false, features = ["sys-getenv"] }

# branch is kw/zkevm-benchmark-workload-repo
# NOTE: We are using a branch of a branch that has not yet been merged into master.
reth-ethereum-primitives = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de", default-features = false }
reth-primitives-traits = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de", default-features = false }
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de", default-features = false }
reth-chainspec = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de", default-features = false }
reth-evm-ethereum = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de", default-features = false }
reth-errors = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de", default-features = false }
reth-trie-common = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de", default-features = false }


# alloy
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-eips = { version = "1.0.41", default-features = false }
alloy-hardforks = { version = "0.4.3", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

# revm
revm = { version = "31.0.0", default-features = false }
revm-bytecode = { version = "7.1.0", default-features = false }

# misc
bincode = "1.3"
bincode_v2 = { package = "bincode", version = "2.0.1", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sha2 = { version = "0.10.9", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "*", default-features = false }
serde_with = { version = "3", default-features = false }
thiserror = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
once_cell = { version = "1.21", default-features = false }

ethereum_ssz_derive = "0.9"
ethereum_ssz = "0.9"

k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "serde",
    "pem",
] }
sparsestate = { git = "https://github.com/eth-act/zkvm-ethereum-mpt.git", tag = "v0.3.0" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.release.package.reth-airbender-stateless-validator]
opt-level = "s"

[patch."https://github.com/paradigmxyz/reth"]
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de" }
reth-errors = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de" }
reth-trie-common = { git = "https://github.com/kevaundray/reth", rev = "2f94b4b8739b7d7dd83d5ca3567d73d7059120de" }

[patch.crates-io]
