[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
benchmark-runner.workspace = true
zkevm-metrics.workspace = true
ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true
witness-generator.workspace = true

walkdir.workspace = true
serde.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"
flate2 = "1.0"
tar = "0.4"

openvm-mpt.workspace = true
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
bincode.workspace = true

[lints]
workspace = true
