[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
sparsestate.workspace = true
benchmark-runner.workspace = true
zkevm-metrics.workspace = true
ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true
ere-platform-trait.workspace = true
witness-generator.workspace = true

walkdir.workspace = true
serde.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"
flate2 = "1.0"
tar = "0.4"
bincode.workspace = true

reth-guest.workspace = true
reth-stateless.workspace = true
reth-trie-common.workspace = true
reth-errors.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-consensus.workspace = true

revm-bytecode.workspace = true

openvm-mpt.workspace = true

[lints]
workspace = true
