[package]
name = "benchmark-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
witness-generator.workspace = true
zkevm-metrics.workspace = true
ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true
ere-io.workspace = true

rayon.workspace = true
tracing.workspace = true
walkdir.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
flate2.workspace = true
reqwest.workspace = true
tar.workspace = true
anyhow.workspace = true
auto_impl.workspace = true
ere-guests-downloader.workspace = true
tempfile.workspace = true

ere-guests-block-encoding-length = { "workspace" = true, features = ["host"] }
ere-guests-stateless-validator-ethrex = { "workspace" = true, features = [
    "host",
] }
ere-guests-stateless-validator-reth = { "workspace" = true, features = [
    "host",
] }
ere-guests-guest = { "workspace" = true }
ere-guests-integration-tests = { "workspace" = true }

[build-dependencies]
toml = { workspace = true }

[lints]
workspace = true
