[package]
name = "benchmark-runner"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
zkevm-metrics.workspace = true
ere-dockerized.workspace = true
ere-cluster-client-openvm.workspace = true
ere-cluster-client-zisk.workspace = true
ere-util-tokio.workspace = true

rayon.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
flate2.workspace = true
reqwest.workspace = true
tar.workspace = true
anyhow.workspace = true
auto_impl.workspace = true
ere-guests-downloader.workspace = true
stateless-validator-common.workspace = true
tempfile.workspace = true
hex.workspace = true

ere-guests-stateless-validator-ethrex.workspace = true
ere-guests-stateless-validator-reth.workspace = true

[build-dependencies]
toml = { workspace = true }

[lints]
workspace = true
