[package]
name = "ere-hosts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
guest-libs.workspace = true
benchmark-runner.workspace = true
block-encoding-length-io.workspace = true

ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true


[lints]
workspace = true
