[package]
name = "ere-hosts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
benchmark-runner.workspace = true
block-encoding-length-guest.workspace = true

ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true

zkboost-ethereum-el-types.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true


[lints]
workspace = true
