[package]
name = "ere-hosts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
benchmark-runner.workspace = true

ere-zkvm-interface.workspace = true
ere-dockerized.workspace = true

ere-guests-block-encoding-length = { "workspace" = true, features = ["host"] }

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true


[lints]
workspace = true
