[package]
name = "witness-generator-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
witness-generator.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
zstd = "0.13"

[lints]
workspace = true
