[package]
name = "witness-generator-spec-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "witness-generator-spec-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
humantime.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true

# alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["k256", "serde", "std"] }
alloy-rlp.workspace = true

# ssz
libssz.workspace = true
libssz_derive.workspace = true
libssz_types.workspace = true

# local
stateless-validator-common.workspace = true
