[package]
name = "witness-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
walkdir.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
http = "1.0"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util = "0.7.15"

alloy-genesis.workspace = true
alloy-eips = { workspace = true }
alloy-rpc-types-eth.workspace = true
ef-tests.workspace = true
reth-stateless.workspace = true
reth-chainspec.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-rpc-api = { workspace = true, features = ["client"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"
tar = "0.4"
flate2 = "1.0"

[features]
slow-tests = []

[lints]
workspace = true
