[package]
name = "witness-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
stateless.workspace = true
reth-chainspec.workspace = true
reth-rpc-api = { workspace = true, features = ["client"] }
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
ef-tests.workspace = true

alloy-genesis.workspace = true
alloy-eips = { workspace = true }
alloy-rpc-types-eth.workspace = true

walkdir.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
erased-serde.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
http = "1.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util = "0.7.15"
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"

[features]
slow-tests = []

[lints]
workspace = true
