[package]
name = "guest-libs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reth-primitives-traits.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-stateless.workspace = true
reth-errors.workspace = true
reth-trie-common.workspace = true

revm-bytecode.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true

ethereum_ssz_derive = { workspace = true }
ethereum_ssz = { workspace = true }

risc0-ethereum-trie.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
