[package]
name = "succinct-guest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sp1-zkvm = "5.0.5"
reth-stateless.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-evm-ethereum = { workspace = true }
reth-chainspec = { workspace = true }

revm = { version = "26.0.1", default-features = false, features = [
    "kzg-rs",
    "bn",
] }
alloy-primitives = { workspace = true, default-features = false, features = [
    "map-foldhash",
    "serde",
    "sha3-keccak",
] }
tracing-subscriber = "*"
tracing = "*"

[lints]
workspace = true
