[package]
name = "witness-generator"
edition = "2024"

[dependencies]
ef-tests.workspace = true
reth-stateless.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }

reth-chainspec.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", default-features = false }
strum = { version = "0.26", features = ["derive"] }
walkdir = "2.3.3"
rayon = "1.7"
hex = "0.4.3"
thiserror = "2"
serde_json = "*"
serde_derive = "*"
