[package]
name = "profile-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
methods = { path = "../../profiling-guests/risc0" }
risc0-zkvm = { version = "^2.1.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
revm = { version = "27.0.2"}
hex = "0.4"

[lints]
workspace = true
