[package]
name = "openvm-panic-guest"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", features = [
    "std",
] }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0" }
