[package]
name = "succinct-rlp-encoding-length"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[dependencies]
sp1-zkvm = "5.0.5"
tracing = "*"
tracing-subscriber = "*"

alloy-consensus = "1.0.22"
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "f520a5c48e5f750aa0dcf0188c74497181d4aca5" }

[patch.crates-io]
