[package]
name = "succinct-rlp-encoding-length"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[dependencies]
sp1-zkvm.workspace = true

guest-libs.workspace = true

tracing = "*"
tracing-subscriber = "*"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3"

reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-consensus.workspace = true
reth-primitives-traits.workspace = true
