[package]
name = "zisk-guest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
bincode.workspace = true
reth-stateless.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
revm = { version = "26.0.1", default-features = false, features = [
    "kzg-rs",
    "bn",
] }
alloy-primitives = { workspace = true, default-features = false, features = [
    "map-foldhash",
    "serde",
    "sha3-keccak",
] }
reth-evm-ethereum = { workspace = true }
reth-chainspec = { workspace = true }

[lints]
workspace = true
