[package]
name = "profile"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^2.1.0", default-features = false, features = ['std'] }
# RISC0 dependencies
getrandom = { version = "0.3.0" }

# revm - only core features
revm = { version = "27.0.2", default-features = false, features = ["std", "serde"] }

# json parsing
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# hex encoding/decoding
hex = { version = "0.4" }

# zkgas profiling