[package]
name = "risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
guest-libs.workspace = true

alloy-primitives = { workspace = true, default-features = false, features = [
    "map-foldhash",
    "serde",
    "tiny-keccak",
] }
c-kzg = { version = "=2.1.1", default-features = true }
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-stateless.workspace = true
reth-evm-ethereum = { workspace = true }
reth-chainspec = { workspace = true }
revm = { version = "26.0.1", features = ["std", "c-kzg", "blst", "bn"] }
risc0-zkvm = { version = "^2.1.0", default-features = false, features = [
    "std",
    "unstable",
    "getrandom",
] }

sha2 = "^0.10.8"
